Moved to own directory

--- a/casa4.3/Dockerfile
+++ b/casa4.3/Dockerfile
@@ -1,7 +1,7 @@
 FROM debian:7.4
 
 RUN apt-get update && apt-get install -y wget bzip2 ca-certificates \
-    libglib2.0-0 libxext6 libsm6 libxrender1
+    libglib2.0-0 libxext6 libsm6 libxrender1 libpng-dev libfreetype-dev
 RUN wget --quiet https://svn.cv.nrao.edu/casa/linux_distro/release/el6/old/casa-release-4.3.1-el6.tar.gz &&\
     mkdir /usr/local/bin/CASA &&\
     mv casa-release-4.3.1-el6.tar.gz /usr/local/bin/CASA &&\
