--- a/casa4.3/Dockerfile
+++ b/casa4.3/Dockerfile
@@ -10,7 +10,7 @@ RUN wget --quiet https://svn.cv.nrao.edu/casa/linux_distro/release/el6/old/casa-
     cd /usr/local/bin/CASA &&\
     tar zxvf casa-release-4.3.1-el6.tar.gz
 
-RUN apt-get install -qqy x11-apps xauth
+RUN apt-get install -qqy x11-apps xauth xvfb
 
 ENV PATH /usr/local/bin/CASA/casa-release-4.3.1-el6:$PATH
 
